--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,6 @@
-Flask==0.10.1
-simplejson==2.2.1
-lxml==2.3.5
-pyyaml==3.10
-fabric==1.4.3
-unittest2==0.5.1
-mock==1.0b1
-psycopg2==2.4.5
-dj-database-url==0.2.1
-gunicorn==0.14.6
-redis==2.7.1
-South==0.7.6
+Flask
+gunicorn
 flask-script
 os
 urllib
-datetime
 ebaysdk
-json
